@@ -84,6 +84,9 @@ C-API
 Library
 -------
 
+- Issue #7066: archive_util.make_archive now restores the cwd if an error is 
+  raised. Initial patch by Ezio Melotti.
+
 - Issue #5006: Better handling of unicode byte-order marks (BOM) in the io
   library. This means, for example, that opening an UTF-16 text file in append
   mode doesn't add a BOM at the end of the file if the file isn't empty.
